Prove registrazione primo accesso utente. Non funziona la query per controllare di non essere registrati.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
         android:theme="@style/Theme.LoginApp"
         tools:targetApi="tiramisu">
         <activity
+            android:name=".FirstAccess"
+            android:exported="false" />
+        <activity
             android:name=".Registration"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".LogOut"
+            android:name=".NavigationActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
