--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.LoginApp"
         tools:targetApi="tiramisu">
         <activity
+            android:name=".RestorePassword"
+            android:exported="false" />
+        <activity
             android:name=".ChangeData"
             android:exported="false" />
         <activity
