Aggiunta MessageAdapter e listView per mostrare la chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/Theme.InsubriApp"
         tools:targetApi="tiramisu">
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".SendMessageActivity"
             android:exported="false" />
         <!--
